frontend/src/style/ImageCropper.css
.cropper-view-box{
  outline: 1px solid var(--primary);
  outline-color: var(--primary);
}

.cropper-line {
  background-color: var(--primary);
}

.cropper-point {
  background-color: var(--primary);
}

.backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 3;
}

.modal {
  width: 80%;
  display: flex;
  flex-direction: column;
  position: fixed;
  left: 0;
  bottom: 0;
  background-color: var(--white);
  padding: 10% 10% 0;
  z-index: 4;
  border-radius: 25px 25px 0px 0px;
}

.content-wrapper {
  width: 100%;
  display: flex;
  justify-content: center;
  margin: 12px 0 24px;
  max-height: 420px;
}

.footer {
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

